# laarid_package_android-system-core2

./: .gitignore  .travis.yml  Makefile.am  android-backtrace-0.0.pc.in  android-cutils-0.0.pc.in  android-diskconfig-0.0.pc.in  android-log-0.0.pc.in  android-mincrypt-0.0.pc.in  android-processgroup-0.0.pc.in  android-sparse-0.0.pc.in  android-suspend-0.0.pc.in  android-sysutils-0.0.pc.in  android-usbhost-0.0.pc.in  android-utils-0.0.pc.in  android-ziparchive-0.0.pc.in  android-zipfile-0.0.pc.in  configure.ac  gtest.mk
adb/: sysdeps.h
base/: Android.mk  android-base-0.0.pc.in  logging.cpp  logging_test.cpp
base/include/android-base/: logging.h
base/include/base/: logging.h
debian/: README  README.source  android-propd.install  android-propd.property-service.service  android-propd.property-service.socket  bintray.json.in  changelog  control  copyright  libandroid-backtrace0-dev.install  libandroid-backtrace0.install  libandroid-backtrace0.lintian-overrides  libandroid-base0-dev.install  libandroid-base0.install  libandroid-base0.lintian-overrides  libandroid-cutils0-dev.install  libandroid-cutils0.install  libandroid-cutils0.lintian-overrides  libandroid-diskconfig0-dev.install  libandroid-diskconfig0.install  libandroid-distkconfig0.lintian-overrides  libandroid-ion0-dev.install  libandroid-ion0.install  libandroid-ion0.lintian-overrides  libandroid-log0-dev.install  libandroid-log0.install  libandroid-log0.lintian-overrides  libandroid-logwrap0-bin.install  libandroid-logwrap0-dev.install  libandroid-logwrap0.install  libandroid-logwrap0.lintian-overrides  libandroid-mincrypt0-dev.install  libandroid-mincrypt0.install  libandroid-mincrypt0.lintian-overrides  libandroid-nativebridge0-dev.install  libandroid-nativebridge0.install  libandroid-nativebridge0.lintian-overrides  libandroid-nativeloader0-dev.install  libandroid-nativeloader0.install  libandroid-nativeloader0.lintian-overrides  (+44 more)
debuggerd/test/: ptrace_fake.cpp
fastbootd/: network_discovery.c
fs_mgr/: fs_mgr.c  fs_mgr_verity.c
gatekeeperd/: SoftGateKeeper.h
gatekeeperd/tests/: gatekeeper_test.cpp
include/: Makefile.am
include/cutils/: atomic-gcc-builtin.h  atomic-inline.h  atomic.h  debugger.h  fs.h  properties.h  sockets.h  sockets.h.in  trace.h
include/log/: log.h  logd.h
include/nativebridge/: native_bridge.h
include/private/: android_filesystem_config.h
include/system/: graphics.h  thread_defs.h
include/sysutils/: FrameworkClient.h  FrameworkCommand.h  FrameworkListener.h  NetlinkEvent.h  NetlinkListener.h  SocketClient.h  SocketListener.h
include/utils/: AndroidThreads.h  Compat.h  LruCache.h  Thread.h  Trace.h  misc.h
init/: Android.mk  builtins.c  builtins.cpp  init.c  init.cpp  init_parser.c  init_parser.cpp  keychords.c  keychords.cpp  log.cpp  log.h  property_service.c  property_service.cpp  property_service.h  util.cpp
libbacktrace/: Android.mk  Backtrace.cpp  BacktraceCurrent.cpp  BacktraceImpl.cpp  BacktraceMap.cpp  BacktracePtrace.cpp  BacktraceThread.cpp  UnwindCurrent.cpp  UnwindPtrace.cpp  android-backtrace-0.0.pc.in  backtrace_test.cpp
libcutils/: Android.mk  android-cutils-0.0.pc.in  android_reboot.c  ashmem-dev.c  canned_fs_config.c  debugger.c  fs.c  fs_config.c  getprop.c  iosched_policy.c  klog.c  memory.c  process_name.c  properties.c  sched_policy.c  setprop.c  socket_local_unix.h  socket_network_client_unix.c  sockets.c  sockets_unix.cpp  str_parms.c  threads.c  trace-dev.c
libcutils/tests/: Android.mk  PropertiesTest.cpp  sockets_test.cpp  test_str_parms.cpp
libdiskconfig/: Android.mk  android-diskconfig-0.0.pc.in  config_mbr.c
libion/: Android.mk  android-ion-0.0.pc.in  ion_test.c
libion/tests/: Android.mk  map_test.cpp
liblog/: Android.mk  android-log-0.0.pc.in  log_event_list.c  log_is_loggable.c  log_read.c  log_time.cpp  logd_reader.c  logd_write.c  logd_writer.c  logger.h  logger_write.c  logprint.c  pmsg_reader.c
libmincrypt/: Android.mk  android-mincrypt-0.0.pc.in
libmincrypt/test/: Android.mk
libnativebridge/: Android.mk  android-nativebridge-0.0.pc.in  native_bridge.cc
libnativebridge/tests/: Android.mk  Android.nativebridge-dummy.mk  ValidNameNativeBridge_test.cpp
libnativeloader/: Android.mk  android-nativeloader-0.0.pc.in  dlext_namespaces.h  native_loader.cpp
libnativeloader/include/nativeloader/: native_loader.h
libnetutils/: Android.mk  android-netutils-0.0.pc.in  ifc_utils.c
libpackagelistparser/: Android.mk  android-packagelistparser-0.0.pc.in  packagelistparser.c
libpixelflinger/: Android.mk  android-pixelflinger-0.0.pc.in  scanline.cpp  trap.cpp
libpixelflinger/codeflinger/: Arm64Assembler.cpp  CodeCache.cpp  GGLAssembler.cpp  MIPS64Assembler.cpp  MIPSAssembler.cpp  disassem.c  load_store.cpp  mips64_disassem.c  mips_disassem.c  texturing.cpp
libpixelflinger/tests/: Android.mk
libpixelflinger/tests/arch-arm64/: Android.mk
libpixelflinger/tests/arch-mips/: Android.mk
libprocessgroup/: Android.mk  android-processgroup-0.0.pc.in  cleanup.cpp  processgroup.cpp
libsparse/: Android.mk  android-sparse-0.0.pc.in  append2simg.c  img2simg.c  sparse_read.c
libsuspend/: Android.mk  android-suspend-0.0.pc.in  autosuspend_autosleep.c  autosuspend_earlysuspend.c  autosuspend_ops.h  autosuspend_wakeup_count.c  strerror_r.c
libsync/: Android.mk  android-sync-0.0.pc.in  sync.c  sync_test.c
libsysutils/: Android.mk  android-sysutils-0.0.pc.in
libsysutils/src/: NetlinkEvent.cpp  SocketClient.cpp  SocketListener.cpp
libusbhost/: Android.mk  android-usbhost-0.0.pc.in  usbhost.c
libutils/: Android.mk  CallStack.cpp  ProcessCallStack.cpp  RefBase.cpp  SystemClock.cpp  Threads.cpp  Timers.cpp  Trace.cpp  android-utils-0.0.pc.in
libutils/tests/: Android.mk  BlobCache_test.cpp
libziparchive/: Android.mk  android-ziparchive-0.0.pc.in  zip_archive.cc
libzipfile/: Android.mk  android-zipfile-0.0.pc.in  test_zipfile.c
logd/: LogBuffer.cpp  LogStatistics.cpp  LogWhiteBlackList.cpp
logwrapper/: Android.mk  android-logwrap-0.0.pc.in  logwrap.c
toolbox/: getprop.c  watchprops.c
(+14 files in other folders)
